syntax = "proto3";

service MessagesService {
    rpc SendTripBeganMessage (SendTripBeganMessageRequest) returns (SendTripBeganMessageResponse);
    rpc SendTripCompletedMessage (SendTripCompletedMessageRequest) returns (SendTripCompletedMessageResponse);
}

message SendTripBeganMessageRequest {
    string trip_id = 1;
    string left_at = 2;
}

message SendTripBeganMessageResponse {
}

message SendTripCompletedMessageRequest {
    string trip_id = 1;
    string left_at = 2;
    string returned_at = 3;
}

message SendTripCompletedMessageResponse {
}
